--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ minecraft_version=1.20.1
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.20,1.21)
 # The Forge version must agree with the Minecraft version to get a valid artifact
-forge_version=47.1.7
+forge_version=47.1.12
 # The Forge version range can use any version of Forge as bounds or match the loader version range
 forge_version_range=[47.1,)
 # The loader version range can only use the major version of Forge/FML as bounds
@@ -42,7 +42,7 @@ mapping_version=1.20.1
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=examplemod
+mod_id=example
 # The human-readable display name for the mod.
 mod_name=Example Mod
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
@@ -59,3 +59,12 @@ mod_authors=YourNameHere, OtherNameHere
 mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
 # Pack version - this changes each minecraft release, in general.
 pack_version_number=15
+
+# tell architectury loom that this project is a forge project.
+# this will enable us to use the "forge" dependency.
+# using archloom without this is possible and will give you a
+# "standard" loom installation with some extra features.
+loom.platform=forge
+
+archives_base_name=ExampleMod
+#mod_author=InkAndSoul
