--- a/settings.gradle
+++ b/settings.gradle
@@ -1,13 +1,22 @@
 pluginManagement {
     repositories {
-        gradlePluginPortal()
         maven {
-            name = 'MinecraftForge'
-            url = 'https://maven.neoforged.net/releases'
+            name "FabricMC"
+            url "https://maven.fabricmc.net/"
         }
+        maven {
+            name "Architectury"
+            url "https://maven.architectury.dev/"
+        }
+        maven {
+            name "NeoForgedReleases"
+            url "https://maven.neoforged.net/releases/"
+        }
+        gradlePluginPortal()
+        mavenLocal()
     }
 }
 
-plugins {
-    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.5.0'
-}
+//plugins {
+//    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.5.0'
+//}
